crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_help_overlay.snap
---
source: crates/tui/src/widgets/tests.rs
assertion_line: 394
expression: buffer_to_string(&buf)
---


                      ╭ Help ───────────────────────────╮
                      │                                 │
                      │  Navigation                     │
                      │  ←          Move left           │
                      │  →          Move right          │
                      │  ↑          Select previous     │
                      │  ↓          Select next         │
                      │                                 │
                      │  Actions                        │
                      │  Enter      Open details        │
                      │  Esc        Close panel         │
                      │  Shift+S    Open settings       │
                      │  Ctrl+C     Quit                │
                      │  ?          Toggle help         │
                      │                                 │
                      │  Press any key to close         │
                      │                                 │
                      │                                 │
                      ╰─────────────────────────────────╯
