crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_lane_empty.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭Backlog (0)─────────────
│No tasks
│
│
│
│
│
│
│
│
│
│
│
│
╰────────────────────────
