crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_lane_with_tasks.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
┬In Progress (2)─────────
│┌──────────────────────┐
││Active task           │
││Currently being wor...│
│└──────────────────────┘
│┌──────────────────────┐
││Waiting task          │
││In queue              │
│└──────────────────────┘
│
│
│
│
│
┴────────────────────────
