crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_settings_panel_dirty.snap
---
source: crates/tui/src/widgets/tests.rs
assertion_line: 493
expression: buffer_to_string(&buf)
---

          ╭ Settings * ──────────────────────────────────────────────╮
          │          Repositories | Polling | Authentication         │
          │                                                          │
          │> + Add repository...                                     │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │Tab: sections | Enter: edit | d: delete | s: save | Esc: c│
          │                                                          │
          ╰──────────────────────────────────────────────────────────╯
