crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_settings_panel_small_terminal.snap
---
source: crates/tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Settings ──────────────────────────────────────╮
│     Repositories | Polling | Authentication    │
│                                                │
│> + Add repository...                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│←→: sections | ↑↓: navigate | Enter: edit | d: d│
│                                                │
╰────────────────────────────────────────────────╯
