crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_settings_panel_with_repositories.snap
---
source: crates/tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---

          ╭ Settings ────────────────────────────────────────────────╮
          │          Repositories | Polling | Authentication         │
          │                                                          │
          │> rust-lang/rust                                          │
          │  tokio-rs/tokio                                          │
          │  private-org/secret-repo [token]                         │
          │  + Add repository...                                     │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │                                                          │
          │←→: sections | ↑↓: navigate | Enter: edit | d: delete | Es│
          │                                                          │
          ╰──────────────────────────────────────────────────────────╯
