crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_status_bar.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Ctrl+C Quit  ←→↑↓ Navigate  Enter Select                                      │
└──────────────────────────────────────────────────────────────────────────────┘
